ng-token-auth integration

--- a/app/pages/register.html
+++ b/app/pages/register.html
@@ -8,21 +8,21 @@
       </div>
       <div class="panel-body">
          <p class="text-center pv">SIGNUP TO GET INSTANT ACCESS.</p>
-         <form role="form" validate-form="" novalidate="" ng-submit="register()" class="mb-lg">
+         <form role="form" validate-form="" novalidate="" ng-submit="handleRegBtnClick()" ng-init="registrationForm = {}" class="mb-lg">
             <div class="form-group has-feedback">
                <label for="signupInputEmail1" class="text-muted">Email address</label>
-               <input id="signupInputEmail1" type="email" placeholder="Enter email" autocomplete="off" ng-model="account.email" required="required" class="form-control" />
+               <input id="signupInputEmail1" type="email" placeholder="Enter email" autocomplete="off" ng-model="registrationForm.email" required="required" class="form-control" />
                <span class="fa fa-envelope form-control-feedback text-muted"></span>
             </div>
             <div class="form-group has-feedback">
                <label for="signupInputPassword1" class="text-muted">Password</label>
-               <input id="signupInputPassword1" type="password" placeholder="Password" autocomplete="off" ng-model="account.password" required="required" class="form-control" />
+               <input id="signupInputPassword1" type="password" placeholder="Password" autocomplete="off" ng-model="registrationForm.password" required="required" class="form-control" />
                <span class="fa fa-lock form-control-feedback text-muted"></span>
             </div>
             <div class="form-group has-feedback">
                <label for="signupInputRePassword1" class="text-muted">Retype Password</label>
-               <input id="signupInputRePassword1" type="password" placeholder="Retype Password" autocomplete="off" ng-model="account.password2" required="required" data-parsley-equalto="#signupInputPassword1" class="form-control"
-               />
+               <input id="signupInputRePassword1" type="password" placeholder="Retype Password" autocomplete="off" ng-model="registrationForm.password_confirmation" required="required" data-parsley-equalto="#signupInputPassword1"
+               class="form-control" />
                <span class="fa fa-lock form-control-feedback text-muted"></span>
             </div>
             <div class="clearfix">
@@ -35,8 +35,12 @@
             </div>
             <button type="submit" class="btn btn-block btn-primary mt-lg">Create account</button>
          </form>
-         <div ng-show="authMsg" class="alert alert-danger text-center">{{authMsg}}</div>
-         <p class="pt-lg text-center">Have an account?</p><a ui-sref="page.login" class="btn btn-block btn-default">Signup</a>
+         <div ng-show="errors" class="alert alert-danger text-center">
+            <div ng-repeat="error in errors track by $index" class="ul">
+               <div class="li">{{error}}</div>
+            </div>
+         </div>
+         <p class="pt-lg text-center">Have an account?</p><a ui-sref="page.login" class="btn btn-block btn-default">Login</a>
       </div>
    </div>
    <!-- END panel-->
