--- a/app/pages/login.html
+++ b/app/pages/login.html
@@ -8,13 +8,13 @@
       </div>
       <div class="panel-body">
          <p class="text-center pv">SIGN IN TO CONTINUE.</p>
-         <form role="form" ng-submit="login()" validate-form="" novalidate="" class="mb-lg">
+         <form role="form" ng-submit="submitLogin(loginForm)" ng-init="loginForm = {}" validate-form="" novalidate="" class="mb-lg">
             <div class="form-group has-feedback">
-               <input id="exampleInputEmail1" type="email" placeholder="Enter email" autocomplete="off" ng-model="account.email" required="required" class="form-control" />
+               <input id="email" type="email" name="email" placeholder="Enter email" autocomplete="off" ng-model="loginForm.email" required="required" class="form-control" />
                <span class="fa fa-envelope form-control-feedback text-muted"></span>
             </div>
             <div class="form-group has-feedback">
-               <input id="exampleInputPassword1" type="password" placeholder="Password" ng-model="account.password" required="required" class="form-control" />
+               <input id="password" type="password" name="password" placeholder="Password" ng-model="loginForm.password" required="required" class="form-control" />
                <span class="fa fa-lock form-control-feedback text-muted"></span>
             </div>
             <div class="clearfix">
@@ -28,7 +28,11 @@
             </div>
             <button type="submit" class="btn btn-block btn-primary mt-lg">Login</button>
          </form>
-         <div ng-show="authMsg" class="alert alert-danger text-center">{{authMsg}}</div>
+         <div ng-show="errors" class="alert alert-danger text-center">
+            <div ng-repeat="error in errors track by $index" class="ul">
+               <div class="li">{{error}}</div>
+            </div>
+         </div>
          <p class="pt-lg text-center">Need to Signup?</p><a ui-sref="page.register" class="btn btn-block btn-default">Register Now</a>
       </div>
    </div>
